# qt_6_gui_template

./: .gitignore  CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
